fix My Collab Header Css error on IE

--- a/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
+++ b/mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
@@ -401,7 +401,7 @@ input.v-textfield[type="text"],textarea.v-textarea,.v-filterselect {
 }
 #topNavigation {
 	height: 40px;
-	background: #FFF;
+	background: #444;
 	background: -moz-linear-gradient(top, #444 0, #222 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #444),
 		color-stop(100%, #222) );
@@ -427,7 +427,7 @@ input.v-textfield[type="text"],textarea.v-textarea,.v-filterselect {
 
 .serviceMenu {
 	float: left;
-	padding: 12px 14px 11px;
+	padding: 12px 14px;
 	background: none !important;
 	border: none;
 	text-shadow: none;
@@ -467,12 +467,12 @@ input.v-textfield[type="text"],textarea.v-textarea,.v-filterselect {
 	border-right: solid 1px #444;
 	height: 20px;
 	width: 0;
-	margin: 10px 0;
+	margin: 10px 0px 0px;
 }
 
 #mainLogo {
 	float: left;
-	height: 40px;
+	height: 38px;
 	width: 120px;
 	margin: 1px 5px 1px 5px;
 	display: block;
